--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,10 @@
 {
-    "id": "obsidian-spaced-repetition",
-    "name": "Spaced Repetition",
-    "version": "1.10.1",
+    "id": "thoughtfull-systems-incremental-writing",
+    "name": "Thoughtfull Systems Incremental Writing",
+    "version": "1.0.0",
     "minAppVersion": "0.15.4",
-    "description": "Fight the forgetting curve by reviewing flashcards & entire notes.",
-    "author": "Stephen Mwangi",
-    "authorUrl": "https://github.com/st3v3nmw",
+    "description": "Incrementally edit and link notes using spaced repetition algorithm.",
+    "author": "Paul Stadig",
+    "authorUrl": "https://github.com/thoughtfull-systems",
     "isDesktopOnly": false,
-    "fundingUrl": "https://ko-fi.com/M4M44DEN6"
 }
